<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/anime"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/anime"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/shounen"
        android:textColor="@color/white"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="14sp" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="311dp"
        android:divider="@color/purple_200"
        android:dividerHeight="1dp">

    </ListView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/shoujo"
        android:textColor="@color/white"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="14sp" />

    <ListView
        android:id="@+id/listView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/purple_200"
        android:dividerHeight="1dp">

    </ListView>




</LinearLayout>